--- a/incredibleMovie/Base.lproj/Main.storyboard
+++ b/incredibleMovie/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -87,6 +88,118 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EHj-Lw-VtY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="661.60000000000002" y="793.5960591133005"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="cY0-Ij-Wph">
+            <objects>
+                <viewController id="Rb1-jF-c5S" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wM7-xN-g0T">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cip-Xk-0ie">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IpY-ob-P0Y">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gUb-1d-ESC" userLabel="Image Container">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
+                                                <subviews>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R5Z-Eu-W0Y">
+                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kt8-gN-70N">
+                                                        <rect key="frame" x="24.999999999999996" y="354" width="41.666666666666657" height="21"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="R5Z-Eu-W0Y" secondAttribute="bottom" id="DpR-rB-qBh"/>
+                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Kt8-gN-70N" secondAttribute="trailing" constant="45" id="Esv-Dv-gcP"/>
+                                                    <constraint firstItem="Kt8-gN-70N" firstAttribute="leading" secondItem="gUb-1d-ESC" secondAttribute="leading" constant="25" id="FhZ-tO-TER"/>
+                                                    <constraint firstAttribute="height" constant="400" id="OGj-Dw-utB"/>
+                                                    <constraint firstItem="R5Z-Eu-W0Y" firstAttribute="top" secondItem="gUb-1d-ESC" secondAttribute="top" id="S3l-u1-qFo"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Kt8-gN-70N" secondAttribute="bottom" constant="25" id="bAW-rH-K7C"/>
+                                                    <constraint firstAttribute="trailing" secondItem="R5Z-Eu-W0Y" secondAttribute="trailing" id="rSN-cy-GGi"/>
+                                                    <constraint firstItem="R5Z-Eu-W0Y" firstAttribute="leading" secondItem="gUb-1d-ESC" secondAttribute="leading" id="rnl-T1-MvO"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LT5-G9-8eb" userLabel="Content Container">
+                                                <rect key="frame" x="0.0" y="400" width="375" height="412"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rXd-HH-0Bf">
+                                                        <rect key="frame" x="25" y="25" width="42" height="21"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FZs-hc-iig">
+                                                        <rect key="frame" x="25" y="61" width="42" height="21"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cls-TL-dUd">
+                                                        <rect key="frame" x="25" y="112" width="325" height="21"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Cls-TL-dUd" secondAttribute="bottom" constant="279" id="3sb-iG-dLn"/>
+                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rXd-HH-0Bf" secondAttribute="trailing" constant="55" id="9ML-YK-OMn"/>
+                                                    <constraint firstItem="Cls-TL-dUd" firstAttribute="leading" secondItem="FZs-hc-iig" secondAttribute="leading" id="HU8-OG-mOp"/>
+                                                    <constraint firstItem="Cls-TL-dUd" firstAttribute="top" secondItem="FZs-hc-iig" secondAttribute="bottom" constant="30" id="Lre-sK-0RW"/>
+                                                    <constraint firstItem="rXd-HH-0Bf" firstAttribute="top" secondItem="LT5-G9-8eb" secondAttribute="top" constant="25" id="M2d-IM-asg"/>
+                                                    <constraint firstItem="FZs-hc-iig" firstAttribute="trailing" secondItem="rXd-HH-0Bf" secondAttribute="trailing" id="RCY-oU-3z7"/>
+                                                    <constraint firstItem="FZs-hc-iig" firstAttribute="leading" secondItem="rXd-HH-0Bf" secondAttribute="leading" id="Rho-iI-7h6"/>
+                                                    <constraint firstItem="rXd-HH-0Bf" firstAttribute="leading" secondItem="LT5-G9-8eb" secondAttribute="leading" constant="25" id="Sjg-xY-fBU"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Cls-TL-dUd" secondAttribute="trailing" constant="25" id="kmE-t8-D2S"/>
+                                                    <constraint firstItem="FZs-hc-iig" firstAttribute="top" secondItem="rXd-HH-0Bf" secondAttribute="bottom" constant="15" id="xW2-3R-LEt"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="LT5-G9-8eb" secondAttribute="bottom" id="Kk1-cm-qkX"/>
+                                            <constraint firstItem="gUb-1d-ESC" firstAttribute="leading" secondItem="IpY-ob-P0Y" secondAttribute="leading" id="N5k-KZ-eLD"/>
+                                            <constraint firstItem="LT5-G9-8eb" firstAttribute="leading" secondItem="IpY-ob-P0Y" secondAttribute="leading" id="jjx-ld-iCO"/>
+                                            <constraint firstAttribute="trailing" secondItem="gUb-1d-ESC" secondAttribute="trailing" id="n6i-QJ-YNZ"/>
+                                            <constraint firstItem="gUb-1d-ESC" firstAttribute="top" secondItem="IpY-ob-P0Y" secondAttribute="top" id="oVn-sY-Z0f"/>
+                                            <constraint firstItem="LT5-G9-8eb" firstAttribute="top" secondItem="gUb-1d-ESC" secondAttribute="bottom" id="rvu-L2-ZUo"/>
+                                            <constraint firstAttribute="trailing" secondItem="LT5-G9-8eb" secondAttribute="trailing" id="vnV-dP-BEa"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="IpY-ob-P0Y" secondAttribute="bottom" id="0mx-sn-2yG"/>
+                                    <constraint firstItem="IpY-ob-P0Y" firstAttribute="leading" secondItem="Cip-Xk-0ie" secondAttribute="leading" id="SJX-Cf-eSh"/>
+                                    <constraint firstItem="IpY-ob-P0Y" firstAttribute="top" secondItem="Cip-Xk-0ie" secondAttribute="top" id="w1j-U2-juU"/>
+                                    <constraint firstAttribute="trailing" secondItem="IpY-ob-P0Y" secondAttribute="trailing" id="xPb-Hn-PCZ"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="IpY-ob-P0Y" firstAttribute="width" secondItem="wM7-xN-g0T" secondAttribute="width" id="0U0-g0-iit"/>
+                            <constraint firstItem="7Wj-9L-2Zb" firstAttribute="trailing" secondItem="Cip-Xk-0ie" secondAttribute="trailing" id="Z88-YH-KHb"/>
+                            <constraint firstItem="7Wj-9L-2Zb" firstAttribute="bottom" secondItem="Cip-Xk-0ie" secondAttribute="bottom" id="acX-fv-puO"/>
+                            <constraint firstItem="Cip-Xk-0ie" firstAttribute="leading" secondItem="7Wj-9L-2Zb" secondAttribute="leading" id="hd4-9w-p3d"/>
+                            <constraint firstItem="Cip-Xk-0ie" firstAttribute="top" secondItem="7Wj-9L-2Zb" secondAttribute="top" id="mBv-Ot-VcO"/>
+                            <constraint firstItem="IpY-ob-P0Y" firstAttribute="height" secondItem="wM7-xN-g0T" secondAttribute="height" id="ss6-Wz-fi2"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7Wj-9L-2Zb"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uXj-hl-u7K" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2436" y="794"/>
         </scene>
     </scenes>
 </document>
